# unist-meal-backend

./: .dockerignore  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  setup.cfg
account/: models.py  services.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20220815_1452.py  0003_alter_user_id.py
config/: settings.py  urls.py
menu/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_menu_type.py  0003_auto_20220813_2337.py  0004_alter_menu_type.py  0005_alter_menu_options.py  0006_menu_created_at.py
notice/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
notice/migrations/: 0001_initial.py
photo/: models.py  serializers.py  urls.py  views.py
photo/migrations/: 0002_alter_photo_url.py
picture/: admin.py  models.py  serializers.py  urls.py  views.py
picture/migrations/: 0001_initial.py
rating/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
rating/migrations/: 0001_initial.py  0002_rating_unique_rating.py  0003_auto_20221008_1556.py  0004_alter_rating_options.py
restaurant/: admin.py  models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_auto_20220519_1623.py  0003_restaurant_url.py  0004_alter_restaurant_url.py
scripts/: init.sh  start-dev.sh  start.sh  test.sh
src/config/: settings.py  urls.py
src/menu/: admin.py  models.py  serializers.py  services.py  (+2 more)
util/: services.py  urls.py  views.py
(+22 files in other folders)
