[tool.poetry]
name = "unist-meal-backend"
version = "0.1.0"
description = ""
authors = ["jongseo98 <jspark98@unist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.13.1"
schedule = "^1.1.0"
Faker = "^11.3.0"
pandas = "^1.3.5"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "21.6b0"
flake8 = "3.9.2"
isort = "5.8.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"